--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
 
     <div class="container">
-      <div class="bio ">
+      <div class="bio active">
 
         <p>
           <span style="font-size: 30px;">Hello,</span><br>
@@ -53,7 +53,7 @@
         <img src="public/ez2.png" alt="" srcset="">
       </div>
 
-      <div class="games active">
+      <div class="games ">
         <div class="game">
           <div class="desc">
             <h2>Brawler <a href="github.com"><i class="fa-brands fa-github"></i></a><i
