--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <!--* ________________ RESUME SECTION ________________ -->
       <div class="resume ">
         <button>Download <i class="fa-solid fa-cloud-arrow-down"></i></button>
-        <img src="/public/Sadoks-Resume.jpg" alt="">
+        <img src="public/Sadoks-Resume.jpg" alt="">
       </div>
 
       <!--* ________________ ABOUT-ME SECTION ________________ -->
