--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         <!-- * Jumpy Slime -->
         <div class="game">
           <div class="desc">
-            <h2>Jumpy Slime [PC]<a href="https://github.com/RamesesXI/MyGames/tree/main/Jumpy%20Slime/Scripts"><i
+            <h2>Jumpy Slime [PC]<a target='_blank' rel="noopener noreferrer"
+                href="https://github.com/RamesesXI/MyGames/tree/main/Jumpy%20Slime/Scripts"><i
                   class="fa-brands fa-github"></i></a><i onclick="downloadgame(1)"
                 class="fa-solid fa-cloud-arrow-down"></i></h2>
             <hr>
@@ -86,7 +87,8 @@
         <div class="game">
           <div class="desc">
             <h2>
-              Antichamber [Android]<a href="https://github.com/RamesesXI/MyGames/tree/main/Antichamber/Scripts"><i
+              Antichamber [Android]<a target='_blank' rel="noopener noreferrer"
+                href="https://github.com/RamesesXI/MyGames/tree/main/Antichamber/Scripts"><i
                   class="fa-brands fa-github"></i></a><i onclick="downloadgame(2)"
                 class="fa-solid fa-cloud-arrow-down"></i>
             </h2>
@@ -106,7 +108,7 @@
         <!-- * Hack the Safe [Android] -->
         <div class="game">
           <div class="desc">
-            <h2>Hack the Safe [Android]<a
+            <h2>Hack the Safe [Android]<a target='_blank' rel="noopener noreferrer"
                 href="https://github.com/RamesesXI/MyGames/tree/main/Hack%20the%20Safe/Scripts"><i
                   class="fa-brands fa-github"></i></a><i onclick="downloadgame(3)"
                 class="fa-solid fa-cloud-arrow-down"></i></h2>
@@ -126,7 +128,7 @@
         <!-- * Guess the Flag -->
         <div class="game">
           <div class="desc">
-            <h2>Guess the Flag [Android]<a
+            <h2>Guess the Flag [Android]<a target='_blank' rel="noopener noreferrer"
                 href="https://github.com/RamesesXI/MyGames/tree/main/Guess%20the%20Flag/Scripts"><i
                   class="fa-brands fa-github"></i></a><i onclick="downloadgame(4)"
                 class="fa-solid fa-cloud-arrow-down"></i></h2>
@@ -146,7 +148,8 @@
         <!-- * Brawler -->
         <div class="game">
           <div class="desc">
-            <h2>Brawler [PC] (Prototype)<a href="https://github.com/RamesesXI/MyGames/tree/main/Brawler/Scripts"><i
+            <h2>Brawler [PC] (Prototype)<a target='_blank' rel="noopener noreferrer"
+                href="https://github.com/RamesesXI/MyGames/tree/main/Brawler/Scripts"><i
                   class="fa-brands fa-github"></i></a><i onclick="downloadgame(5)"
                 class="fa-solid fa-cloud-arrow-down"></i>
             </h2>
@@ -190,9 +193,9 @@
 
       <!--* ________________ ABOUT-ME SECTION ________________ -->
       <div class="about-me">
+        <img src="public/Profile-Pic.jpg" alt="" srcset="">
         This is a summary of my life story regarding my passion for game development. Giving some context and background
         on how I got onto this path.
-         
         <h2>Gaming Obsession:</h2>
         I've been playing games since I was 4 years old, it started with random PC games I found on the family desktop,
         into online flash games, later getting sucked into PlayStation 2 games, then Game Boy, PSP, Mobile games, but
