--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" type="text/javascript" src="main.js"></script>
-    <script src="https://kit.fontawesome.com/b53bd91778.js" crossorigin="anonymous"></script>
+    <title>Sadok Ben Mefteh</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Sadok Ben Mefteh</title>
     <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
+    <script src="https://kit.fontawesome.com/b53bd91778.js" crossorigin="anonymous"></script>
+    <script type="module" type="text/javascript" src="main.js"></script>
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
 
-    <!--* ________________ NAVIGATION SECTION________________ -->
+    <!--* ________________ NAVIGATION SECTION____________________ -->
     <nav>
       <h1 style="font-size: xx-large;padding-top: 0.1rem;">Sadok Ben Mefteh</h1>
       <ul class="nav-links" id="nav-links">
@@ -30,8 +31,7 @@
         <div class="line3"></div>
       </div>
     </nav>
-
-
+    <!--! ________________ NAVIGATION SECTION____________________ -->
     <!--* ________________ MAIN CONTAINER SECTION________________ -->
     <div class="container">
       <!--* ________________ HOME SECTION ________________ -->
@@ -59,6 +59,7 @@
         </p>
         <img src="public/ez2.png" alt="" srcset="">
       </div>
+      <!--! ________________ HOME SECTION ________________ -->
 
       <!--* ________________ GAMES SECTION________________ -->
       <div class="games ">
@@ -184,13 +185,13 @@
         </div> -->
 
       </div>
-
+      <!--! ________________ GAMES SECTION________________ -->
       <!--* ________________ RESUME SECTION ________________ -->
       <div class="resume ">
         <button>Download <i class="fa-solid fa-cloud-arrow-down"></i></button>
         <img src="public/Sadoks-Resume.jpg" alt="">
       </div>
-
+      <!--! ________________ RESUME SECTION ________________ -->
       <!--* ________________ ABOUT-ME SECTION ________________ -->
       <div class="about-me">
         <img src="public/Profile-Pic.jpg" alt="" srcset="">
@@ -270,7 +271,7 @@
         it would be :p
 
       </div>
-
+      <!--! ________________ ABOUT-ME SECTION ________________ -->
       <!--* ________________ CONTACT SECTION ________________ -->
       <div class="contact">
         <span>
@@ -278,10 +279,11 @@
 
         </span>
       </div>
+      <!--! ________________ CONTACT SECTION ________________ -->
+
     </div>
-
-
-    <!--* ________________ MODAL MECHANISM ________________ -->
+    <!--! ________________ MAIN CONTAINER SECTION________________ -->
+    <!--* ________________ MODAL MECHANISM ______________________ -->
     <div class="modal-bg">
       <div class="modal">
         <img class="modalImage" alt="" srcset="">
@@ -290,6 +292,7 @@
         <span class="clsB"><i class="fa-solid fa-xmark"></i></span>
       </div>
     </div>
+    <!--! ________________ MODAL MECHANISM ______________________ -->
 
   </body>
 
