--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li id='games'>Games</li>
         <li id='resume'>Resume</li>
         <li id='about-me'>About me</li>
-        <li id='contact'>Contact</li>
+        <!-- <li id='contact'>Contact</li> -->
       </ul>
       <div class="menuToggle">
         <div class="line1"></div>
@@ -54,13 +54,12 @@
           <button onclick="document.getElementById('about-me').click();"
             style="margin-top: 0;margin-bottom: 0.85rem;">Click here</button>
           <br>
-          If you'd like to get in touch, please do
-          <button style="margin-top: 0;">Click here</button>
+          If you'd like to get in touch, please do through: <b style="font-size: large;">sbenmefteh@gmail.com</b>
+          <!-- <button style="margin-top: 0;">Click here</button> -->
         </p>
         <img src="public/ez2.png" alt="" srcset="">
       </div>
       <!--! ________________ HOME SECTION ________________ -->
-
       <!--* ________________ GAMES SECTION________________ -->
       <div class="games ">
 
