--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
       <!--! ________________ GAMES SECTION________________ -->
       <!--* ________________ RESUME SECTION ________________ -->
       <div class="resume ">
-        <button>Download <i class="fa-solid fa-cloud-arrow-down"></i></button>
+        <button> <a style="text-decoration: none;color: white;" href="public/Sadoks-Resume.pdf" download>Download
+            <i class="fa-solid fa-cloud-arrow-down"></i></a></button>
         <img src="public/Sadoks-Resume.jpg" alt="">
       </div>
       <!--! ________________ RESUME SECTION ________________ -->
